tests/automatic_require_default/automatic_require_default.exp
Error ------------------------------------------------------------------------------------------------- imports.js:11:14

Cannot get `Default.T` because property `T` is missing in `Number` [1]. [prop-missing]

   imports.js:11:14
    11| (1 : Default.T); // error T missing in number
                     ^

References:
   <BUILTINS>/core.js:363:15
   363| declare class Number {
                      ^^^^^^ [1]


Error --------------------------------------------------------------------------------------------------- react.js:10:13

Cannot get `React.NotAType` because property `NotAType` is missing in module `react` [1]. [prop-missing]

   react.js:10:13
    10| ("" : React.NotAType); // error NotAType missing in React
                    ^^^^^^^^

References:
   <BUILTINS>/react.js:472:27
   472|   declare module.exports: $Exports<'react'>;
                                  ^^^^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------------------------- react.js:11:13

Cannot get `react.NotAType` because property `NotAType` is missing in module `react` [1]. [prop-missing]

   react.js:11:13
   11| ("" : react.NotAType); // error NotAType missing in react
                   ^^^^^^^^

References:
   react.js:4:15
    4| const react = require('react');
                     ^^^^^^^^^^^^^^^^ [1]



Found 3 errors
